tests/fail/yapkı-uyumsuzluğu.kip

(1'i) ("a"'yı) ekidir.
